# embedding-axis

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: setup_uv.sh  write_embeddings.py
src/embeddingaxis/: config.py  types.py
src/embeddingaxis/data/: embeddings.json
src/embeddingaxis/util/: dotenv_.py  openai_.py  scipy_.py
