[project]
name = "embedding-axis"
version = "0.1.0"
description = "Compare sample's embedding distance from reference embeddings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.78.0",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embeddingaxis"]  # Allows `embeddingaxis` to be importable from project directory.

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 320

[tool.uv]
link-mode = "copy"  # Allows `uv sync` to run without warning.
